--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,6 +2,7 @@ footer {
     bottom: 0;
     padding-top: 10px;
     padding-bottom: 8px;
+    align-content: space-between;
   }
   .footer-copywright {
     text-align: center;
