--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -56,7 +56,7 @@
     font-weight: 200;
     font-size: 1rem;
     display: flex;
-    text-align: justify;
+    text-align: left;
     padding-right: 3%;
 }
 
